Prevent overstretching of images in upload staging area (Firefox)

--- a/app/styles/article-edit.less
+++ b/app/styles/article-edit.less
@@ -232,8 +232,8 @@ a:hover {
                         clear: both;
                     }
                     img {
-                        max-width: 100%;
-                        max-height: 100%;
+                        max-width: 260px;
+                        max-height: 150px;
                     }
                 }
                 .img-metadata {
